2005-10-05  Chris Lumens  <clumens@redhat.com>

	* Imported contents from anaconda.